# isezakiiroha

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
_tutorials/1_serial/tutorial/snippets/: models.py  views.py
_tutorials/3_classbased/: pyproject.toml
_tutorials/3_classbased/snippets/: models.py  views.py
_tutorials/3_classbased/snippets/migrations/: 0001_initial.py
_tutorials/3_classbased/tutorial/: settings.py  wsgi.py
_tutorials/3_classbased/tutorial/tutorial/: settings.py
_tutorials/4_auth/snippets/: serializers.py  urls.py  views.py
_tutorials/4_auth/snippets/migrations/: 0001_initial.py
_tutorials/4_auth/tutorial/: urls.py
_tutorials/5_relation/snippets/: models.py  serializers.py  urls.py  views.py
_tutorials/6_viewset/: pyproject.toml
_tutorials/6_viewset/snippets/: urls.py  views.py
_tutorials/6_viewset/tutorial/: settings.py
project/: settings.py  urls.py
project/app/: __init__.py  apps.py  serializers.py  signals.py  views.py
project/app/migrations/: 0001_initial.py
project/app/models/: resource.py
project/app/serializers/: __init__.py  resource.py
project/app/tests/models/: test_resources.py
project/app/views/: __init__.py  resource.py
