[tool.poetry]
name = "1_serial"
version = "0.1.0"
description = ""
authors = ["Satoshi Ishii <ishii@springboard-inc.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"
djangorestframework = "^3.11.1"
pygments = "^2.6.1"
httpie = "^2.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
